tests/machine/x/zig/cross_join_filter.error
Error on line 10: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/cross_join_filter.zig:10:308: error: expected type 'i32', found '[]const u8'
/tmp/zig-0.12.0/lib/std/hash_map.zig:551:38: note: parameter type declared here
/tmp/zig-0.12.0/lib/std/hash_map.zig:14:13: error: std.auto_hash.autoHash does not allow slices here ([]const u8) because the intent is unclear. Consider using std.StringHashMap for hashing the contents of []const u8. Alternatively, consider using std.auto_hash.hash or providing your own hash function instead.
/tmp/zig-0.12.0/lib/std/hash_map.zig:55:39: note: called from here

9:     letters = &[_][]const u8{"A", "B"};
10:     pairs = blk1: { var _tmp0 = std.ArrayList(std.AutoHashMap([]const u8, i32)).init(std.heap.page_allocator); for (nums) |n| { for (letters) |l| { if (!((@mod(n, 2) == 0))) continue; _tmp0.append(blk0: { var m = std.AutoHashMap(i32, i32).init(std.heap.page_allocator); m.put(n, n) catch unreachable; m.put(l, l) catch unreachable; break :blk0 m; }) catch unreachable; } } const _tmp1 = _tmp0.toOwnedSlice() catch unreachable; break :blk1 _tmp1; };
11:     std.debug.print("{s}\n", .{"--- Even pairs ---"});
